[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bazik-sdk"
version = "0.2.0"
description = "Async Python SDK for the Bazik API — MonCash & NatCash payments, payouts, transfers and wallet for Haiti."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Falandy Jean" }]
keywords = ["bazik", "moncash", "natcash", "haiti", "payments", "fintech", "async"]
dependencies = ["httpx>=0.24"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/FalandyJEAN/bazik-sdk-python"
Issues = "https://github.com/FalandyJEAN/bazik-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["bazik"]
